src/test/deca/context/invalid/homemade/instanceof_notidentifier_decompile.res
class Ouaip extends Object {
}
{
	Ouaip ouaip = new Ouaip();
	Ouaip ouaipp = new Ouaip();
	if ((ouaipp  instanceof  ouaip)) {
		println("Ouaip");
	}
}
